--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.726.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@types/next": "^9.0.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -17,6 +20,7 @@
     "lucide-react": "^0.471.1",
     "motion": "^11.18.0",
     "next": "^15.1.4",
+    "pdfjs-dist": "^3.0.279",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
