--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@types/next": "^9.0.0",
     "axios": "^1.7.9",
+    "canvas": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.1",
