--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "soogle",
   "version": "0.1.0",
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
